--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -894,6 +894,13 @@ div .h3 {
   transform: scale(1.1);
 }
 
+a #animation {
+  animation: rotate 3s ease 1s infinite;
+  
+}
+
+
+
 /*--------------------------------------------------------------
 # Services Section
 --------------------------------------------------------------*/
